Kapitel 7 halb fertig

--- a/Bibliothek/Bibliothek.bib
+++ b/Bibliothek/Bibliothek.bib
@@ -126,6 +126,13 @@
 	file = {ScienceDirect Full Text PDF:C\:\\Users\\Fabian\\Zotero\\storage\\SCCG7Y4K\\Kessler and Chakrabarti - 1999 - Speeding up the pace of new product development.pdf:application/pdf;ScienceDirect Snapshot:C\:\\Users\\Fabian\\Zotero\\storage\\ZU2JW686\\S0737678298000484.html:text/html}
 }
 
+@incollection{klinker_fliesen_2019,
+	title = {Fliesen verlegen mit der {Microsoft} {HoloLens}},
+	booktitle = {Systematische {Entwicklung} von {Dienstleistungsinnonvationen}: {Augmented} {Reality} für {Pflege} und {Industrielle} {Wartung}},
+	author = {Klinker, Kai and Kloos, Fabian and Shevdin, Egor and Krcmar, Helmut},
+	year = {2019}
+}
+
 @incollection{schulz_quick_2012,
 	address = {Wiesbaden},
 	title = {Quick and easy!? {Fokusgruppen} in der angewandten {Sozialwissenschaft}},
@@ -170,24 +177,6 @@
 	author = {Hentrich, Jörg and Hoß, Dietrich},
 	year = {2002},
 	file = {arbeiten_lernen_Reader_Netzwerke.pdf:C\:\\Users\\Fabian\\Zotero\\storage\\ZBLPHRQR\\arbeiten_lernen_Reader_Netzwerke.pdf:application/pdf}
-}
-
-@article{wang_using_2007,
-	title = {Using {Augmented} {Reality} to {Plan} {Virtual} {Construction} {Worksite}},
-	volume = {4},
-	issn = {1729-8814},
-	url = {https://doi.org/10.5772/5677},
-	doi = {10.5772/5677},
-	abstract = {Current construction worksite layout planning heavily relies on 2D paper media where the worksite planners sketch the future layout adjacent to their real environment. This traditional approach turns out to be ineffective and prone to error because only experienced and well-trained planners are able to generate the effective layout design with paper sketch. Augmented Reality (AR), as a new user interface technology, introduces a completely new perspective for construction worksite planning. This paper disucsses the related AR work and issues in construction and describes the concept and prototype of an AR-based construction planning tool, AR Planner with virtual elements sets and tangible interface. The focus of the paper is to identify and integrate worksite planning rules into the AR planner with the purpose of intelligently preventing potential planning errors and process inefficiency, thus maximizing the overall productivity. Future work includes refining and verifying AR Planner in realistic projects.},
-	language = {en},
-	number = {4},
-	urldate = {2019-01-04},
-	journal = {International Journal of Advanced Robotic Systems},
-	author = {Wang, Xiangyu},
-	month = dec,
-	year = {2007},
-	pages = {42},
-	file = {SAGE PDF Full Text:C\:\\Users\\Fabian\\Zotero\\storage\\TVD3566X\\Wang - 2007 - Using Augmented Reality to Plan Virtual Constructi.pdf:application/pdf}
 }
 
 @inproceedings{wolk_utilizing_2008,
@@ -516,7 +505,7 @@
 	file = {Galli_Dominick_W.BA.BO.GM.pdf:C\:\\Users\\Fabian\\Zotero\\storage\\CDQSJJ6Z\\Galli_Dominick_W.BA.BO.GM.pdf:application/pdf}
 }
 
-@contents{https://doi.org/10.13140/rg.2.2.26978.79044,
+@online{doi_org,
 	doi = {10.13140/rg.2.2.26978.79044},
 	url = {http://rgdoi.net/10.13140/RG.2.2.26978.79044},
 	author = {Calisto,  Francisco Maria and Nascimento,  Jacinto C.},
