--- a/Cover/disclaimer.tex
+++ b/Cover/disclaimer.tex
@@ -7,6 +7,6 @@ anderen als die angegebenen Quellen und Hilfsmittel benutzt habe.
 
 \vspace{15mm}
 \noindent
-\getSubmissionLocation{}, \getSubmissionDate{} \hspace{5cm} \getAuthor{}
+\getSubmissionLocation{}, \hspace{5cm} \getAuthor{}
 
 \cleardoublepage{}
