--- a/Cover/title.tex
+++ b/Cover/title.tex
@@ -18,6 +18,9 @@
 
   \vspace{15mm}
   {\huge\bfseries \getTitle{}}
+  
+  \vspace{10mm}
+  {\large\bfseries \getEngTitle{}}
 
   \vspace{15mm}
   \begin{tabular}{l l}
