--- a/Kapitel/Kapitel2.tex
+++ b/Kapitel/Kapitel2.tex
@@ -4,7 +4,7 @@ Dieses Kapitel legt den Grundstein für diese Arbeit. Es liefert den theoretisch
 
 \section{Digitalisierung in Handwerksbetrieben, kleinen und mittleren Unternehmen}
 
-Die Digitalisierung hält Einzug in den meisten Branchen, was in dieser modernen Zeit, in welcher auch im privaten Leben mehr und mehr Technik zum Einsatz kommt, nicht verwunderlich ist. Mithilfe neuer Technologien und Programmen lassen sich beispielsweise Abläufe beschleunigen, Genauigkeit und Effizienz verbessern, sowie die Erreichbarkeit steigern. Oft werden diese Technologien zum bewältigen des Verwaltungsaufwands genutzt, was kleinen und mittleren Unternehmen (\textbf{KMUs}), als auch Handwerksbetrieben mehr Zeit für ihre eigentliche Aufgabe lässt: das Handwerk \cite{noauthor_neue_nodate}. Unternehmen wollen sich diese neuen Chancen zu nutze machen und Investieren dazu in Umrüstung und Umstrukturierung von Unternehmensabläufen, sowie in die Integration von neuen Programmen und technischen Hilfsmitteln in ihr Arbeitsumfeld \cite{TODO: Buchkapitel}. Große, kommerzielle Unternehmen fällt das leichter als KMUs und Handwerksbetrieben \cite{hateful_six_krcmar}.
+Die Digitalisierung hält Einzug in den meisten Branchen, was in dieser modernen Zeit, in welcher auch im privaten Leben mehr und mehr Technik zum Einsatz kommt, nicht verwunderlich ist. Mithilfe neuer Technologien und Programmen lassen sich beispielsweise Abläufe beschleunigen, Genauigkeit und Effizienz verbessern, sowie die Erreichbarkeit steigern. Oft werden diese Technologien zum bewältigen des Verwaltungsaufwands genutzt, was kleinen und mittleren Unternehmen (\textbf{KMUs}), als auch Handwerksbetrieben mehr Zeit für ihre eigentliche Aufgabe lässt: das Handwerk \cite{noauthor_neue_nodate}. Unternehmen wollen sich diese neuen Chancen zu nutze machen und Investieren dazu in Umrüstung und Umstrukturierung von Unternehmensabläufen, sowie in die Integration von neuen Programmen und technischen Hilfsmitteln in ihr Arbeitsumfeld \cite{klinker_fliesen_2019}. Große, kommerzielle Unternehmen fällt das leichter als KMUs und Handwerksbetrieben \cite{hateful_six_krcmar}.
 
 KMUs spielen aber ein wichtige Rolle in unserer Gesellschaft und Wirtschaft, weshalb ihr langsamer Fortschritt im Bereich Digitalisierung auf keinen Fall leicht zu nehmen ist. In den USA beispielsweise stellen KMUs 95\% aller Unternehmen und sind verantwortlich für zwei Drittel aller neuen Arbeitsplätze. Zusätzlich werden 60\% des Exports von ihnen gestemmt \cite{allocca_innovation_2006}. Diese Argumente machen KMUs zu einem lohnenswerten und interessanten Forschungsgebiet, was sich in den letzten Jahren auch deutlich zeigte.
 
@@ -26,7 +26,7 @@ Des weiteren spielt es eine große Rolle, ob neue Technologien den Arbeitsalltag
 
 Unternehmerische Manager können oft die steigende Komplexität der Firma, durch deren Wachstum und Integration von neuen Technologien, schwer überblicken, worunter die Eingliederungen von Neuerungen in Geschäftsprozesse leidet \cite{rothwell_small_1989}. Dafür sind weniger standardisierte Prozesse und Guidlines, ein weniger systematischer Management Style und generell die geringere Erfahrung des Managements im Vergleich zu großen Unternehmen verantwortlich \cite{allocca_innovation_2006}. 
 
-Das Einbinden der neuen Technologien in die bestehende Infrastruktur des Unternehmens stellt zusätzliche Risiken und Kosten dar. Der Arbeitsplatz war meist ursprünglich nicht dafür designed, um schnell und einfach neue Geräte oder Programme zu integrieren. Teilweise lässt auch der Ort an dem gearbeitet wird den Einsatz generell nicht oder nur bedingt zu. Auf einer Baustelle oder in einem Kellergewölbe beispielsweise kann keine permanente WLAN Verbindung sichergestellt werden \cite{TODO: Buchkapitel}. Dadurch wird der Einsatz von digitalen Medien erschwert.
+Das Einbinden der neuen Technologien in die bestehende Infrastruktur des Unternehmens stellt zusätzliche Risiken und Kosten dar. Der Arbeitsplatz war meist ursprünglich nicht dafür designed, um schnell und einfach neue Geräte oder Programme zu integrieren. Teilweise lässt auch der Ort an dem gearbeitet wird den Einsatz generell nicht oder nur bedingt zu. Auf einer Baustelle oder in einem Kellergewölbe beispielsweise kann keine permanente WLAN Verbindung sichergestellt werden \cite{klinker_fliesen_2019}. Dadurch wird der Einsatz von digitalen Medien erschwert.
 
 Da KMUs und vor allem Handwerksbetriebe oft aus wenigen Mitarbeitern bestehen, ist die Wahrscheinlichkeit hoch, dass kein Technikspezialist an Board ist. Das macht es nötig, sich fremde Expertise einzuholen, um in die richtige Technologie für den Betrieb zu investieren. Jedoch bringt das zusätzliche Kosten und Zeitaufwand mit sich, welche oft nicht verfügbar sind \cite{rothwell_small_1989}. Des weiteren müssen die Mitarbeiter für die neue Technologie geschult werden, wodurch wieder Zeit verloren geht. Fehler, die durch Anschaffung falscher technischer Hilfsmittel, oder durch unsachgemäßen, ineffizienten Einsatz dieser entstehen, kosten unnötig Geld. Das kann sich ein Unternehmen mit begrenzten Ressourcen nicht leisten \cite{allocca_innovation_2006}.
 
@@ -38,9 +38,9 @@ Das bereits Produkte zur Unterstützung für Handwerksbetriebe und KMUs existier
 \section{Unterstützung der Spezifikationserstellung mit digitalen Anwendungen}
 \label{sec:spezi}
 
-''Auf Baustellen müssen sich Kunde und Handwerker erst einig werden, was genau getan werden soll, denn ''[g]erade im Dienstleistungsbereich gibt es einen engen Zusammenhang zwischen hoher Kundenzufriedenheit und dem Einbinden des Kunden''.'' (\cite{TODO: Buchkapitel}, zitiert nach \cite{hentrich_arbeiten_2002}). Die Kommunikation des Plans gestaltet sich dabei oft schwierig. Ein Problem, das viele Handwerker anmerken (siehe Fokusgruppe \ref{sec:fokus}) ist, dass Kunden wenig Vorstellungsvermögen haben. Der Handwerker, als Experte, kann einen Raum betreten und sich direkt vorstellen, wie er diesen gestalten würde. Dies dem Kunden nur durch Worte zu kommunizieren ist jedoch schwierig. Dadurch kann der Handwerker den Kunden nicht effektiv beraten und dieser kann wiederum schwer seine Vorstellungen beschreiben. Verschiedene Werkzeuge können dabei helfen, dies zu veranschaulichen.
+''Auf Baustellen müssen sich Kunde und Handwerker erst einig werden, was genau getan werden soll, denn ''[g]erade im Dienstleistungsbereich gibt es einen engen Zusammenhang zwischen hoher Kundenzufriedenheit und dem Einbinden des Kunden''.'' (\cite{klinker_fliesen_2019}, zitiert nach \cite{hentrich_arbeiten_2002}). Die Kommunikation des Plans gestaltet sich dabei oft schwierig. Ein Problem, das viele Handwerker anmerken (siehe Fokusgruppe \ref{sec:fokus}) ist, dass Kunden wenig Vorstellungsvermögen haben. Der Handwerker, als Experte, kann einen Raum betreten und sich direkt vorstellen, wie er diesen gestalten würde. Dies dem Kunden nur durch Worte zu kommunizieren ist jedoch schwierig. Dadurch kann der Handwerker den Kunden nicht effektiv beraten und dieser kann wiederum schwer seine Vorstellungen beschreiben. Verschiedene Werkzeuge können dabei helfen, dies zu veranschaulichen.
 
-Traditionell werden Baupläne und Blaupausen auf Papier in 2D gezeichnet \cite{TODO: Buchkapitel}. Der technische Zeichner kann so ganze Gebäude bis ins kleinste Detail spezifizieren und sogar mit Inneneinrichtung ausstatten. Diese Methode hat jedoch zum Nachteil, dass zum Lesen der Pläne sehr viel Erfahrung erforderlich ist. Gleichzeitig sind diese, aufgrund ihrer Komplexität, auch für erfahrene Handwerker fehleranfällig und führen zu Fehlern bei der Umsetzung \cite{wang_using_2007}. Für den Kunden bringt die Verwendung dieser Pläne kaum einen Vorteil bezüglich des Verständnisses. Die Zeichnungen sind technisch komplex, können von Laien nur mäßig verstanden werden und tragen dadurch nur mäßig zu einer besseren Kunde-Handwerker-Kommunikation bei.
+Traditionell werden Baupläne und Blaupausen auf Papier in 2D gezeichnet \cite{klinker_fliesen_2019}. Der technische Zeichner kann so ganze Gebäude bis ins kleinste Detail spezifizieren und sogar mit Inneneinrichtung ausstatten. Diese Methode hat jedoch zum Nachteil, dass zum Lesen der Pläne sehr viel Erfahrung erforderlich ist. Gleichzeitig sind diese, aufgrund ihrer Komplexität, auch für erfahrene Handwerker fehleranfällig und führen zu Fehlern bei der Umsetzung \cite{wang_using_2007}. Für den Kunden bringt die Verwendung dieser Pläne kaum einen Vorteil bezüglich des Verständnisses. Die Zeichnungen sind technisch komplex, können von Laien nur mäßig verstanden werden und tragen dadurch nur mäßig zu einer besseren Kunde-Handwerker-Kommunikation bei.
 
 Es wird also ein Mittel oder Werkzeug benötigt, dass diese Verständigung und somit auch die Spezifikation und den Vertragsschluss unterstützt. Es soll dabei den Kunden unterstützen die Pläne des Handwerkers besser zu verstehen und sich vorstellen zu können. Dafür muss es geeignete Visualisierungsmethoden mitbringen, um den Plan verständlich darzustellen. \\
 Der Kunde kann anhand des ihm gezeigten Bildes besser Änderungen Vorschlagen. So kann er deutlicher Änderungsvorschläge bringen, zeigen wo er sie Anbringen möchte und erleichtert damit das Kundengespräch für beide Parteien. \\
@@ -168,4 +168,4 @@ Das, in Sektion \ref{sec:label} beschriebene PaletteCAD Tool bietet auch Funktio
 
 AR als Visualisierungswerkzeug bringt einige Vorteile mit sich. Es unterstützt den Kunden dabei, sich das Endergebnis einer Arbeit vorzustellen, indem ihm das Ergebnis direkt im Raum gezeigt wird. Gleichzeitig erleichtert es so die Kommunikation zwischen Laien und Experten. Es kann deutlich am Plan gezeigt werden, wo Änderungen vorgenommen werden sollen. Teilweise kann durch AR auch Zeit und Geld gespart werden, da kein physikalischer Prototyp für einen Auftrag gebaut werden muss. Dieser kann einfach virtuell erstellt werden, wodurch er kein Material benötigt und beliebig verändert werden kann. Zusätzlich dient ein virtuelles Bild des Vorhabens der Orientierung bei der Arbeit. Das Modell ist im Vertrag verankert, wodurch die Arbeiter wissen worauf sie hinarbeiten und die zu bringende Leistung präzise dokumentiert ist.
 
-Viele der oben gezeigten AR Applikationen existieren hauptsächlich für Tablets und Smartphones. Diese Geräte sind auch die Zugänglichsten, mit der größten Nutzergruppe. Eine kostenintensivere Lösung, welche in den letzten Jahren immer mehr an Aufmerksamkeit erlangt, sind Datenbrillen. Diese bieten den Vorteil gegenüber Handhelds, dass man bei ihrer Benutzung beide Hände frei hat, was sich besonders für Handwerker anbietet. Diese können in einer realen Umgebung mit Hologrammen interagieren, sich beispielsweise Beschreibungen anzeigen lassen und gleichzeitig an einer Maschine oder einem Problem arbeiten. Zusätzlich lassen Datenbrillen den Nutzer in seiner physikalischen Umgebung in die virtuelle Welt eintauchen. Die Hologramme werden um ihn herum angezeigt und verändern sich mit der Änderung seiner Blickfeldes. Das ermöglicht intuitive Interaktion und Bewegung im Raum, ohne gegen etwas zu laufen. Diese Bewegungsfreiheit ermöglicht es auch Pläne oder Modelle aus allen Richtungen zu betrachten und so besser zu verstehen. Der Nutzer betrachtet also nicht nur ein 3D Modell sondern \enquote{erlebt} es\cite{TODO:Buchkapitel}. Daher bieten Datenbrillen hohes Potential für das Handwerk und KMUs.
+Viele der oben gezeigten AR Applikationen existieren hauptsächlich für Tablets und Smartphones. Diese Geräte sind auch die Zugänglichsten, mit der größten Nutzergruppe. Eine kostenintensivere Lösung, welche in den letzten Jahren immer mehr an Aufmerksamkeit erlangt, sind Datenbrillen. Diese bieten den Vorteil gegenüber Handhelds, dass man bei ihrer Benutzung beide Hände frei hat, was sich besonders für Handwerker anbietet. Diese können in einer realen Umgebung mit Hologrammen interagieren, sich beispielsweise Beschreibungen anzeigen lassen und gleichzeitig an einer Maschine oder einem Problem arbeiten. Zusätzlich lassen Datenbrillen den Nutzer in seiner physikalischen Umgebung in die virtuelle Welt eintauchen. Die Hologramme werden um ihn herum angezeigt und verändern sich mit der Änderung seiner Blickfeldes. Das ermöglicht intuitive Interaktion und Bewegung im Raum, ohne gegen etwas zu laufen. Diese Bewegungsfreiheit ermöglicht es auch Pläne oder Modelle aus allen Richtungen zu betrachten und so besser zu verstehen. Der Nutzer betrachtet also nicht nur ein 3D Modell sondern \enquote{erlebt} es\cite{klinker_fliesen_2019}. Daher bieten Datenbrillen hohes Potential für das Handwerk und KMUs.
