--- a/Kapitel/Kapitel3.tex
+++ b/Kapitel/Kapitel3.tex
@@ -144,6 +144,7 @@ Die gewonnenen Erkenntnisse müssen nun entsprechend Kommuniziert werden, um sie
 In wissenschaftlichen Publikationen kann die Struktur dieser Methode genutzt werden, um die Ausarbeitung zu strukturieren, wie beispielsweise empirische Forschung durch den empirischen Prozess (Problemdefinition, Literaturrecherche, Aufstellen der Hypothesen, Datensammlung, Analyse, Ergebnis und Fazit) strukturiert wird. Die Kommunikation der Ergebnisse erfordert Wissen darüber, wie Arbeiten in der entsprechenden Disziplin verfasst werden. 
 
 \section{Design des Fragebogens}
+\label{fragebogen}
 
 Diese Arbeit zielt darauf ab, einen theoretischen, sowie einen praktischen Beitrag abzuleiten. Dazu wurden Anmerkungen der Testpersonen während und nach den Probandentests notiert. Diese Informationen können dazu genutzt werden, Ideen zu sammeln und die Applikation zu verbessern, allerdings lassen sie sich nicht gut vergleichen. Sie stellen den praktischen Beitrag dar. Für den theoretischen Teil benötigt man vergleichbare Werte und Größen. Dazu wurde ein Evaluationsbogen konzipiert, der folgende Fragen beantworten soll:
 
@@ -206,7 +207,7 @@ Die originale Version des NASA-TLX sieht eine Gewichtung der einzelnen Dimension
 
 Auch wenn der NASA-TLX hoch etabliert, diagnostisch und valide ist, wird doch erwähnt, dass die deutsche Version scheinbar weniger sensitiv ist als die englische \cite{horold_faktor_2015}. In dieser Arbeit wird die deutsche Version verwendet, da die App mit deutschsprachigen Probanden getestet wird. Es wird darauf vertraut, dass die Sensitivität ausreichend ist. 
 
-Der Fragebogen wurde mit \LaTeX  aus dieser Vorlage erstellt \cite{https://doi.org/10.13140/rg.2.2.26978.79044}.
+Der Fragebogen wurde mit \LaTeX  aus dieser Vorlage erstellt \cite{doi_org}.
 
 \subsection{TAM und TAM2}
 
