--- a/Kapitel/Kapitel5.tex
+++ b/Kapitel/Kapitel5.tex
@@ -189,7 +189,7 @@ Die zugeschnittene Fliese brachte er am Ende der Wand an. Anschließend klebte e
 	\end{center}
 \end{figure}
 
-Sobald die erste Wand fertig verfliest war begann er mit den anderen und ich fing an die Fliesen zu verfugen. Dazu strich ich mit einer Kelle dick Fugenmasse in die Zwischenräume der Fliesen. Anschließend wischte ich mit einem feuchten Schwamm darüber, um die überschüssige Fugenmasse abzutragen und der Fuge ihr richtiges Aussehen zu geben. Zum Schuss zog ich den frisch ausgewaschenen Schwamm einmal komplett von oben nach unten über die Wand, um die Fliesen sauber zu waschen. So ging ich auch bei den anderen Wänden vor. [TODO: evtl Fenster Geschichte einfügen)
+Sobald die erste Wand fertig verfliest war begann er mit den anderen und ich fing an die Fliesen zu verfugen. Dazu strich ich mit einer Kelle dick Fugenmasse in die Zwischenräume der Fliesen. Anschließend wischte ich mit einem feuchten Schwamm darüber, um die überschüssige Fugenmasse abzutragen und der Fuge ihr richtiges Aussehen zu geben. Zum Schuss zog ich den frisch ausgewaschenen Schwamm einmal komplett von oben nach unten über die Wand, um die Fliesen sauber zu waschen. So ging ich auch bei den anderen Wänden vor.
 
 \begin{figure}[h]
 	\begin{center}
