--- a/settings/commands.tex
+++ b/settings/commands.tex
@@ -2,12 +2,13 @@
 \newcommand*{\getUniversity}{Technische Universität München}
 \newcommand*{\getFaculty}{Fakultät für Informatik}
 \newcommand*{\getTitle}{Digitalisierung im Handwerk}
+\newcommand*{\getEngTitle}{Assisting craftsmen with Augmented Reality}
 \newcommand*{\getAuthor}{Fabian Kloos}
-\newcommand*{\getDoctype}{Masterarbeit}
+\newcommand*{\getDoctype}{Masterarbeit in Informatik}
 \newcommand*{\getSupervisor}{Prof. Dr. Helmut Krcmar}
 \newcommand*{\getAdvisor}{M.Sc. Kai Klinker}
 \newcommand*{\getOtherAdvisor}{}
-\newcommand*{\getSubmissionDate}{14. Januar 2019}
+\newcommand*{\getSubmissionDate}{15. Februar 2019}
 \newcommand*{\getSubmissionLocation}{München}
 
 % TODO: add custom commands etc.
